Added padding to navbar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="particles-js">
 </div>
 <div class="text" style="width: 100%">
-    <nav class="navbar navbar-expand-md fixed-top pt-4">
+    <nav class="navbar navbar-expand-md fixed-top pt-4 pb-3">
         <!-- Brand -->
         <a class="navbar-brand animated" href="#" id="name">VIKRAM SINGH</a>
 
