--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 <div id="particles-js">
@@ -35,10 +36,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: white">PORTFOLIO</a>
+                    <a class="nav-link" href="#hr1" style="color: white">PORTFOLIO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: white">CONTACT</a>
+                    <a class="nav-link" href="#hr2" style="color: white">CONTACT</a>
                 </li>
             </ul>
         </div>
@@ -51,7 +52,7 @@
         <span id="app" style="font-size:4vh;color:#fff090;font-weight: 500;font-family:'Roboto Slab', serif; "></span>
         <br>
         <button id="cv" class="btn mt-4 mb-5 animated"><a href="#" style="font-weight:900;font-family:monospace,'serif';color: white;font-size: 2vh" id="resume" class="animated">CURRICULUM VITAE</a></button>
-        <hr style="border-color:#ffffff;border-width: 0.2ex" class="mt-5">
+        <hr style="border-color:#ffffff;border-width: 0.2ex" class="mt-5" id="hr1">
     </div>
     <div class="container-fluid mt-5">
         <div class="row text-center">
@@ -122,7 +123,7 @@
             </div>
         </div>
     </div>
-    <hr style="border-color:#ffffff;border-width: 0.2ex" class="mt-5">
+    <hr style="border-color:#ffffff;border-width: 0.2ex" class="mt-5" id="hr2">
     <div class="row mb-5 mt-5 text-center justify-content-center">
         <div class="col-md-4 mt-2 ml-4">
             <ul class="list-inline">
