--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#hr1" style="color: white">PORTFOLIO</a>
+                    <a href="#hr1"  id="portfolio-btn" class="nav-link"  style="color: white">PORTFOLIO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#hr2" style="color: white">CONTACT</a>
+                    <a href="#hr2"  id="contact-btn "class="nav-link" style="color: white">CONTACT</a>
                 </li>
             </ul>
         </div>
