Added links and scrolling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="Js/jquery-3.3.1.js"></script>
     <script src="Js/particles.js"></script>
     <script src="Js/typewriter.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/jquery.localscroll@2.0.0/jquery.localScroll.min.js"></script>
     <script src="Js/bootstrap.js"></script>
     <script src="Js/index.js"></script>
     <link rel="stylesheet" href="Css/bootstrap.css">
@@ -128,22 +129,22 @@
         <div class="col-md-4 mt-2 ml-4">
             <ul class="list-inline">
                 <li class="list-inline-item mr-4">
-                    <a target="_blank" href="#">
+                    <a target="_blank" href="mailto:vikram.bedi97@gmail.com">
                         <i class="fa fa-at" style="color: white !important;font-size: 30px"></i>
                     </a>
                 </li>
                 <li class="list-inline-item mr-4">
-                    <a target="_blank" href="#">
+                    <a target="_blank" href="https://www.linkedin.com/in/vikramsinghbedi/">
                         <i class="fa fa-linkedin" style="color: white !important;font-size: 30px"></i>
                     </a>
                 </li>
                 <li class="list-inline-item mr-4">
-                    <a target="_blank" href="#">
+                    <a target="_blank" href="http://www.github.com/singhVikram97">
                         <i class="fa fa-github" style="color: white !important;font-size: 30px"></i>
                     </a>
                 </li>
                 <li class="list-inline-item mr-4">
-                    <a target="_blank" href="#">
+                    <a target="_blank" href="https://codepen.io/VikramSB/">
                         <i class="fa fa-codepen" style="color: white !important;font-size: 30px"></i>
                     </a>
                 </li>
