--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <span id="app" style="font-size:4vh;color:#fff090;font-weight: 500;font-family:'Roboto Slab', serif; "></span>
         <br>
         <button id="cv" class="btn mt-4 mb-5 animated"><a href="#" style="font-weight:900;font-family:monospace,'serif';color: white;font-size: 2vh" id="resume" class="animated">CURRICULUM VITAE</a></button>
-        <hr style="border-color:#ffffff;border-width: 0.2ex" class="mt-5" id="hr1">
+        <hr style="border-color:#ffffff;border-width: 0.2ex;width: 100%" class="mt-5" id="hr1">
     </div>
     <div class="container-fluid mt-5">
         <div class="row text-center">
@@ -124,7 +124,7 @@
             </div>
         </div>
     </div>
-    <hr style="border-color:#ffffff;border-width: 0.2ex" class="mt-5" id="hr2">
+    <hr style="border-color:#ffffff;border-width: 0.2ex;width: 100%" class="mt-5" id="hr2">
     <div class="row mb-5 mt-5 text-center justify-content-center">
         <div class="col-md-4 mt-2 ml-4">
             <ul class="list-inline">
