Added more links

--- a/index.html
+++ b/index.html
@@ -100,24 +100,24 @@
                 <p class="text-muted " style="font-size: 20px;color: white">
                     <a target="_blank" href="#" >
                     <span class="hvr-pulse-grow">
-                        <span class="text-muted white">• Projects Showcase</span>
+                        <a target="_blank" href="https://www.gitshowcase.com/singhvikram97" class="text-muted white">• Projects Showcase</a>
                     </span>
                     </a>
                     <br>
                     <a target="_blank" href="#" >
                     <span class="hvr-pulse-grow">
-                    <span class="text-muted white">• Github</span>
+                    <a target="_blank" href="http://www.github.com/singhVikram97" class="text-muted white">• Github</a>
                     </span>
                     </a>
                     <br>
                     <a target="_blank" href="#" >
                     <span class="hvr-pulse-grow">
-                    <span class="text-muted white">• LinkedIn</span>
+                        <a target="_blank" href="https://www.linkedin.com/in/vikramsinghbedi/" class="text-muted white">• LinkedIn</a>
                     </span></a>
                     <br>
                     <a target="_blank" href="#" >
                     <span class="hvr-pulse-grow">
-                    <span class="text-muted white">• Codechef</span>
+                        <a target="_blank" href="https://www.codechef.com/users/singh_vikram" class="text-muted white">• Codechef</a>
                     </span></a>
                     <br>
                 </p>
