--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <span style="font-size: 4vh;color: white">I am a </span>
         <span id="app" style="font-size:4vh;color:#fff090;font-weight: 500;font-family:'Roboto Slab', serif; "></span>
         <br>
-        <button id="cv" class="btn mt-4 mb-5 animated"><a href="#" style="font-weight:900;font-family:monospace,'serif';color: white;font-size: 2vh" id="resume" class="animated">CURRICULUM VITAE</a></button>
+        <button id="cv" class="btn mt-4 mb-5 animated"><a href="https://drive.google.com/open?id=1DixEmqx7GgXpToDFlvu_iY4tca1obu0x" style="font-weight:900;font-family:monospace,'serif';color: white;font-size: 2vh" id="resume" class="animated">CURRICULUM VITAE</a></button>
         <hr style="border-color:#ffffff;border-width: 0.2ex;width: 100%" class="mt-5" id="hr1">
     </div>
     <div class="container-fluid mt-5">
